# nv-ingest

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .qaignore  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile-CLI  MANIFEST.in  Makefile  QAIGNORE_SYNTAX.md  README.md  RELEASE.md  bo767_full.py  catalog-info.yaml  docker-compose-dev.yaml  docker-compose-multi-gpu.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.simple.yaml  docker-compose.yaml  extra-requirements.txt  final-docker-compose.yaml  index.html  objects.inv  process_pdf_profile.html  requirements.txt  setup.cfg  setup.py  test-requirements.txt  util-requirements.txt
.gitlab/: CODEOWNERS
SUMMARY/: index.html
benchmarks/: pyproject.toml
benchmarks/src/nv_ingest_benchmarks/: ingest.py  utils.py
ci/: README.md
client/: README.md  requirements.txt  setup.py
common/: README.md  setup.py  test.py
config/: otel-collector-config.yaml  prometheus.yaml
corpus_suite_poc/: .gitignore  README.md  pyproject.toml
corpus_suite_poc/src/corpus_suite_poc/: __init__.py  config.py  main.py  processing.py
corpus_suite_poc/src/corpus_suite_poc/agent_api/: __init__.py  app.py  deps.py  routes_documents.py  routes_mgmt.py  routes_query.py  schemas.py
corpus_suite_poc/src/corpus_suite_poc/ingest/: __init__.py  pdf_pages.py  service.py
corpus_suite_poc/src/corpus_suite_poc/ops/: __init__.py  health.py  metrics.py
corpus_suite_poc/src/corpus_suite_poc/pipeline/: __init__.py  chunking.py  dag.py  runner.py
corpus_suite_poc/src/corpus_suite_poc/query/: __init__.py  hybrid.py
corpus_suite_poc/src/corpus_suite_poc/store/: __init__.py  blobs.py  db.py
docs/: kubernetes-dev.md  requirements.txt  telemetry.md
helm/: CHANGELOG.md  Chart.yaml  README.md  openshift.yaml  (+1 more)
(+648 files in other folders)
